--- a/templates/base.html
+++ b/templates/base.html
@@ -78,7 +78,7 @@
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="{% url 'home' %}">home</a></li>
                         <li class="nav-item dropdown">
                             <a class="nav-link js-scroll-trigger" href="#" id="all-menus-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                menus
+                                menu
                             </a>
                             <div class="dropdown-menu border-0" aria-labelledby="all-menus-link">
                                 <a href="{% url 'products' %}?category=sandwiches" class="dropdown-item">sandwiches</a>
@@ -122,3 +122,4 @@
 
   </body>
 </html>
+
