--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -10404,19 +10404,16 @@ body {
     margin: 2.5px 0 0 -5px;
 }
 
-.projects-section .product-text {
+.projects-section .product-container {
   padding: 0.5rem 0.5rem;
   font-size: 90%;
 }
 
-.product-text h1 {
+.product-text-one {
   font-family: "Varela Round", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   font-size:  calc(28px + (80 - 28) * ((100vw - 300px) / 1620));
   letter-spacing: 0.8vw;
   color: #303F3F;
-}
-.product-text h2 {
-  font-size: calc(14px + (28 - 14) * ((100vw - 300px) / 1620));
 }
 
 /* general styling */
@@ -10468,6 +10465,12 @@ body {
     .product-selected, .product-unselected {
         width: 25vw;
     }
+    .product-container {
+        margin-top: 1rem !important;
+    }
+    .product-text-two {
+    font-size: calc(14px + (62 - 14) * ((100vw - 300px) / 1620));
+    }
 }
 @media screen and (orientation: landscape){ /* Credit: https://stackoverflow.com/questions/43589507/how-can-you-have-bootstrap-responsiveness-based-on-screen-ratio-instead-of-scree */
     .masthead {
@@ -10485,14 +10488,17 @@ body {
     .product-selected, .product-unselected {
         width: 20vw;
     }
-    .projects-section .product-text {
+    .projects-section .product-container {
         padding: 0.5rem 2.5rem;
     }
-    .projects-section .product-text hr {
+    .projects-section .product-container hr {
         border-color: #64a19d;
         border-width: 0.25rem;
         width: 30%;
         padding: 0.5rem 3rem;
+    }
+    .product-text-two {
+    font-size: calc(14px + (32 - 14) * ((100vw - 300px) / 1620));
     }
 }
 
