--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -23,9 +23,14 @@
                     {% endif %}
                 </div>
                 <div class="col-xl-6">
-                    {% for image in image %}
-                        <img class="img-fluid image-80" src="{{ image.image }}" alt="{{ category }} image" /></div>
-                    {% endfor %}
+                    {% if category %}
+                        {% for image in image %}
+                            <img class="img-fluid image-80" src="{{ image.image }}" alt="{{ category }} image" />
+                        {% endfor %}
+                    {% else %}
+                        <img class="img-fluid image-80" src="/media/assets/img/pexels-kaboompics-com-5928.jpg" alt="salad bowl" />
+                    {% endif %}
+                </div>
                 <div class="col-xl-6">
                     <div class="text-center h-100 project">
                         <div class="d-flex h-100">
@@ -56,11 +61,15 @@
                                 {% for product in products %}
                                     {% if range %}
                                         {% if product.range == range %}
-                                            <h2 class="product-text-two mx-auto flex-margin-b text-blue">{{ product.name }}</h2>
+                                            <div class="mx-auto flex-margin-b text-blue">
+                                                <a class="product-text-two" href="{% url 'product_detail' %}?category_product={{ category }},{{ product.name }},selected-one">{{ product.name }}</a>
+                                            </div>
                                         {% endif %}
                                     {% else %}
                                         {% if product.range == "standard" %}
-                                            <h2 class="product-text-two mx-auto flex-margin-b text-blue">{{ product.name }}</h2>
+                                            <div class="product-text-two mx-auto flex-margin-b text-blue">
+                                                {{ product.name }}
+                                            </div>
                                         {% endif %}
                                     {% endif %}
                                 {% endfor %}
@@ -72,41 +81,9 @@
             </div>
         </div>
     </section>
-    <!-- Contact-->
-    <section class="contact-section bg-blue">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-4 mb-3 mb-md-0">
-                    <div class="card py-4 h-100">
-                        <div class="card-body text-center">
-                            <i class="fas fa-map-marked-alt text-primary mb-2"></i>
-                            <h4 class="text-uppercase m-0">Address</h4>
-                            <hr class="my-4" />
-                            <div class="small text-black-50">22 Acacia Avenue</div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4 mb-3 mb-md-0">
-                    <div class="card py-4 h-100">
-                        <div class="card-body text-center">
-                            <i class="fas fa-envelope text-primary mb-2"></i>
-                            <h4 class="text-uppercase m-0">Email</h4>
-                            <hr class="my-4" />
-                            <div class="small text-black-50"><a href="#!">hello@yourdomain.com</a></div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4 mb-3 mb-md-0">
-                    <div class="card py-4 h-100">
-                        <div class="card-body text-center">
-                            <i class="fas fa-mobile-alt text-primary mb-2"></i>
-                            <h4 class="text-uppercase m-0">Phone</h4>
-                            <hr class="my-4" />
-                            <div class="small text-black-50">+1 (555) 555-5555</div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
+{% endblock %}
+
+{% block postloadjs %}
+{{ block.super }}
+{% include 'products/includes/contact.html' %}
 {% endblock %}
