--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -166,7 +166,6 @@ a {
 }
 a:hover {
   color: #71B7B2;
-  text-decoration: underline;
 }
 
 a:not([href]):not([class]) {
@@ -10356,6 +10355,11 @@ body {
     padding: 2vh 2vw;
     background-color: #426765;
 }
+.product-container .masthead-button {
+    max-height: 20vh;
+    padding: 2vh 0.5vw;
+    background-color: #426765;
+}
 
 .product-selected, .product-unselected {
     text-align: center;
@@ -10425,10 +10429,6 @@ body {
     opacity: 0.8;
 }
 
-.flex-margin-b {
-    margin-bottom: 3.5vh;
-}
-
 .text-xs {
     font-size: 12px;
     line-height: 16px;
@@ -10471,10 +10471,13 @@ body {
         margin-top: 1rem !important;
     }
     .product-text-two {
-    font-size: calc(14px + (62 - 14) * ((100vw - 300px) / 1620));
+        font-size: calc(14px + (62 - 14) * ((100vw - 300px) / 1620));
     }
     .product-text-header {
-    font-size: calc(22px + (80 - 22) * ((100vw - 300px) / 1620));
+        font-size: calc(22px + (80 - 22) * ((100vw - 300px) / 1620));
+    }
+    .flex-margin-b {
+        margin-bottom: 3.5vh;
     }
 }
 @media screen and (orientation: landscape){ /* Credit: https://stackoverflow.com/questions/43589507/how-can-you-have-bootstrap-responsiveness-based-on-screen-ratio-instead-of-scree */
@@ -10503,10 +10506,13 @@ body {
         padding: 0.5rem 3rem;
     }
     .product-text-two {
-    font-size: calc(14px + (32 - 14) * ((100vw - 300px) / 1620));
+        font-size: calc(14px + (32 - 14) * ((100vw - 300px) / 1620));
     }
     .product-text-header {
-    font-size: calc(22px + (48 - 22) * ((100vw - 300px) / 1620));
+        font-size: calc(22px + (48 - 22) * ((100vw - 300px) / 1620));
+    }
+    .flex-margin-b {
+        margin-bottom: 1.5vh;
     }
 }
 
