--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -73,8 +73,13 @@
                                             {% endfor %}
                                         {% endif %}
                                     </div>
+                                    <div class="col-12 mt-3 slidecontainer">
+                                        <div class="text-blue text-xs mb-2">Select number of servings ...</div>
+                                        <input type="range" min="1" max="10" value="5" class="slider" id="myRange">
+                                        <p class="text-blue text-xs mb-2">Value: <span id="demo"></span></p>
+                                    </div>
                                 </div>
-                                <hr class="d-none d-xl-block mb-0 ml-0" />
+                                <hr class="d-none d-xl-block mb-0 ml-0">
                             </div>
                         </div>
                     </div>
@@ -85,6 +90,18 @@
 {% endblock %}
 
 {% block postloadjs %}
+    <script type="text/javascript">
+        // Credit: https://www.w3schools.com/howto/howto_js_rangeslider.asp
+
+        var slider = document.getElementById("myRange");
+        var output = document.getElementById("demo");
+        output.innerHTML = slider.value; // Display the default slider value
+
+        // Update the current slider value (each time you drag the slider handle)
+        slider.oninput = function() {
+        output.innerHTML = this.value;
+        }
+    </script>
 {{ block.super }}
 {% include 'products/includes/contact.html' %}
 {% endblock %}
