--- a/templates/base.html
+++ b/templates/base.html
@@ -19,6 +19,8 @@
         <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet" />
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="{% static 'css/styles.css' %}" rel="stylesheet" /> <!-- Credit: https://startbootstrap.com/previews/grayscale -->
+        <!-- slider CSS -->
+        <link href="{% static 'css/slider.css' %}" rel="stylesheet" /> <!-- Credit: https://www.w3schools.com/howto/howto_js_rangeslider.asp -->
     {% endblock %}
 
     {% block extra_css %}
@@ -36,6 +38,8 @@
         <script src="{% static 'js/scripts.js' %}"></script> <!-- Credit: https://startbootstrap.com/previews/grayscale -->
         <!-- Stripe -->
         <script src="https://js.stripe.com/v3/"></script>
+        <!-- slider -->
+        <script src="{% static 'js/slider.js' %}"></script> <!-- Credit: https://www.w3schools.com/howto/howto_js_rangeslider.asp -->
     {% endblock %}
 
     {% block extra_js %}
