--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -43,40 +43,45 @@
                                     <div class="col-4">
                                         {% if selected == "selected-one" %}
                                             {% for option in options %}
-                                                <a class="product-selected masthead-button opaque-100 btn btn-primary js-scroll-trigger flex-margin-b" href="{% url 'product_detail' %}?category_product={{ category }},{{ product }},selected-one">{{ option.option1 }}</a>
+                                                <a class="product-selected masthead-button btn btn-primary js-scroll-trigger flex-margin-b" href="{% url 'product_detail' %}?category_product={{ category }},{{ product }},selected-one">{{ option.option1 }}</a>
                                             {% endfor %}
                                         {% else %}
                                             {% for option in options %}
-                                                <a class="product-unselected masthead-button opaque-100 btn btn-primary js-scroll-trigger flex-margin-b" href="{% url 'product_detail' %}?category_product={{ category }},{{ product }},selected-one">{{ option.option1 }}</a>
+                                                <a class="product-unselected masthead-button btn btn-primary js-scroll-trigger flex-margin-b" href="{% url 'product_detail' %}?category_product={{ category }},{{ product }},selected-one">{{ option.option1 }}</a>
                                             {% endfor %}
                                         {% endif %}
                                     </div>
                                     <div class="col-4">
                                         {% if selected == "selected-two" %}
                                             {% for option in options %}
-                                                <a class="product-selected masthead-button opaque-100 btn btn-primary js-scroll-trigger flex-margin-b" href="{% url 'product_detail' %}?category_product={{ category }},{{ product }},selected-two">{{ option.option2 }}</a>
+                                                <a class="product-selected masthead-button btn btn-primary js-scroll-trigger flex-margin-b" href="{% url 'product_detail' %}?category_product={{ category }},{{ product }},selected-two">{{ option.option2 }}</a>
                                             {% endfor %}
                                         {% else %}
                                             {% for option in options %}
-                                                <a class="product-unselected masthead-button opaque-100 btn btn-primary js-scroll-trigger flex-margin-b" href="{% url 'product_detail' %}?category_product={{ category }},{{ product }},selected-two">{{ option.option2 }}</a>
+                                                <a class="product-unselected masthead-button btn btn-primary js-scroll-trigger flex-margin-b" href="{% url 'product_detail' %}?category_product={{ category }},{{ product }},selected-two">{{ option.option2 }}</a>
                                             {% endfor %}
                                         {% endif %}
                                     </div>
                                     <div class="col-4">
                                         {% if selected == "selected-three" %}
                                             {% for option in options %}
-                                                <a class="product-selected masthead-button opaque-100 btn btn-primary js-scroll-trigger flex-margin-b" href="{% url 'product_detail' %}?category_product={{ category }},{{ product }},selected-three">{{ option.option3 }}</a>
+                                                <a class="product-selected masthead-button btn btn-primary js-scroll-trigger flex-margin-b" href="{% url 'product_detail' %}?category_product={{ category }},{{ product }},selected-three">{{ option.option3 }}</a>
                                             {% endfor %}
                                         {% else %}
                                             {% for option in options %}
-                                                <a class="product-unselected masthead-button opaque-100 btn btn-primary js-scroll-trigger flex-margin-b" href="{% url 'product_detail' %}?category_product={{ category }},{{ product }},selected-three">{{ option.option3 }}</a>
+                                                <a class="product-unselected masthead-button btn btn-primary js-scroll-trigger flex-margin-b" href="{% url 'product_detail' %}?category_product={{ category }},{{ product }},selected-three">{{ option.option3 }}</a>
                                             {% endfor %}
                                         {% endif %}
                                     </div>
                                     <div class="col-12 mt-3 slidecontainer">
                                         <div class="text-blue text-xs mb-2">Select number of servings ...</div>
-                                        <input type="range" min="1" max="10" value="5" class="slider" id="myRange">
-                                        <p class="text-blue text-xs mb-2">Value: <span id="demo"></span></p>
+                                        <input type="range" min="1" max="10" value="1" class="slider" id="myRange">
+                                        <p class="text-blue text-xs mb-2">Servings: <span id="demo"></span></p>
+                                    </div>
+                                    <div class="col-4 flex-margin-t">
+                                        {% for product in products %}
+                                            <div class="price-button js-scroll-trigger flex-margin-b">Price: £{{ product.price }}</div>
+                                        {% endfor %}
                                     </div>
                                 </div>
                                 <hr class="d-none d-xl-block mb-0 ml-0">
