--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -11,7 +11,7 @@
 
 {% block content %}
     <!-- Produce-->
-    <section class="projects-section bg-light" id="projects">
+    <section class="projects-section bg-light" id="products">
         <div class="container">
             <!-- Produce One Row-->
             <div class="row justify-content-center no-gutters">
